fix(App): there was noticeable dom shift when error shown
So set min height to minimized dom shift or completely removed for some
certain conditions like one line error message

--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,7 @@
 .MuiMenuItem-root p .profile-menu-icon {
     margin-right: 10px;
 }
+
+.MuiFormHelperText-root {
+    min-height: 20px;
+}
